Reverse Engineering を承認（Intent G・H のためにコード知識ベースを読み直し。範囲は partial の 89 パス・19 部品、所見 K-1〜K-11 を記録、学び3件を保存）
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>